--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
   <title>Week 3</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
       <div class="nav-container">
         <div class="nav-logo">
           <a>
-            <img src="images/logo.svg">
+            <img src="./images/logo.svg">
           </a>
         </div>
 
@@ -34,8 +34,8 @@
               <li>
                 <a class="product-dropdown">
                   <p>Product</p>
-                  <img src="images/icon-arrow-dark.svg" class="product-arrow">
-                  <img src="images/icon-arrow-light.svg" class="product-arrow">
+                  <img src="./images/icon-arrow-dark.svg" class="product-arrow">
+                  <img src="./images/icon-arrow-light.svg" class="product-arrow">
                 </a>
 
                 <ul class="product-dropdown-menu">
@@ -50,8 +50,8 @@
               <li>
                 <a class="company-dropdown">
                   <p>Company</p> 
-                  <img src="images/icon-arrow-dark.svg" class="company-arrow">
-                  <img src="images/icon-arrow-light.svg" class="company-arrow">
+                  <img src="./images/icon-arrow-dark.svg" class="company-arrow">
+                  <img src="./images/icon-arrow-light.svg" class="company-arrow">
                 </a>
 
                 <ul class="company-dropdown-menu">
@@ -66,8 +66,8 @@
               <li>
                 <a class="connect-dropdown">
                   <p>Connect</p>
-                  <img src="images/icon-arrow-dark.svg" class="connect-arrow">
-                  <img src="images/icon-arrow-light.svg" class="connect-arrow">
+                  <img src="./images/icon-arrow-dark.svg" class="connect-arrow">
+                  <img src="./images/icon-arrow-light.svg" class="connect-arrow">
                 </a>
                 <ul class="connect-dropdown-menu">
                   <li><a href="#">Contact</a></li>
@@ -97,7 +97,7 @@
 
     <section class="future-container text-center">
       <h2>Designed for the future</h2>
-      <img src="images/illustration-editor-desktop.svg">
+      <img src="./images/illustration-editor-desktop.svg">
 
       <h2>Introducing an extensible editor</h2>
       <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or change the looks of a blog.</p>
@@ -107,7 +107,7 @@
     </section>
 
     <section class="dark-container text-center">
-      <img src="images/illustration-phones.svg">
+      <img src="./images/illustration-phones.svg">
       <div>
         <h1>State of the Art Infrastructure</h1>
         <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
@@ -115,7 +115,7 @@
     </section>
 
     <section class="before-footer-container text-center">
-      <img src="images/illustration-laptop-mobile.svg">
+      <img src="./images/illustration-laptop-mobile.svg">
       <div>
         <h2>Free, open, simple</h2>
         <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
@@ -126,7 +126,7 @@
     </section>
 
     <footer class="footer-container text-center">
-      <img src="images/logo.svg">
+      <img src="./images/logo.svg">
       <div class="footer-links">
         <ul>
           <li><a href="#">Product</a></li>
@@ -152,6 +152,6 @@
       </div>
     </footer>
   </div>
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
